--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 
 <head>
     <title>
-        Linear Regression
+        Data Science Demo
     </title>
 
 </head>
 
 <body>
 
-<h1>Linear Regression</h1>
+<h1><a href="/linear_regression/index.html">Linear Regression</a>>a</h1>
 
-<button> <a href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression.ipynb"> Go to code</a></button>
-
-<script src="https://gist.github.com/karmakarsubhajit/29daa10aec2e02dd6b98bfd49e4ed168.js"></script>
 
 </body>
 </html> 
