--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1><a href="/linear_regression/index.html">Linear Regression</a>>a</h1>
+<h1><a href="./linear_regression/index.html">Linear Regression</a></h1>
 
 
 </body>
