--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-<h2>Data Science Demo</h2>
+<h1>Data Science Demo</h1>
 
-<h1><a href="./linear_regression/index.html">Linear Regression</a></h1>
-
+<ol>
+    <li> <h2><a href="./linear_regression/index.html">Linear Regression</a></h2> </li>
+</ol>
 
 </body>
 </html> 
