--- a/linear_regression/index.html
+++ b/linear_regression/index.html
@@ -13,7 +13,7 @@
 <h1>Linear Regression</h1>
 
     
-<h4> Generate Dataset </h4>
+<h4> Load Dataset </h4>
 
 <button> <a href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Load_Datasets.ipynb"> Go to code</a></button>
 
