--- a/index.html
+++ b/index.html
@@ -2,18 +2,33 @@
 <html>
 
 <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <title>
         Data Science Demo
     </title>
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="mystyle.css">
+    
 </head>
 
-<body>
-<h1>Data Science Demo</h1>
-
-<ul>
-    <li> <h2><a href="./linear_regression/index.html">Linear Regression</a></h2> </li>
-</ul>
-
+<body> 
+    <h1>Data Science Demo</h1>  
+<div class="image">
+    <br>
+    <div class="btn-group-vertical">
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Linear Regression</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Clustering</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Logistic Regression</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Naive Bayes</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Random Forest</a>
+    </div> 
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html> 
