formatted the code

--- a/linear_regression/index.html
+++ b/linear_regression/index.html
@@ -1,36 +1,59 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Linear Regression</title>
 
-<head>
-    <title>
-        Linear Regression
-    </title>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <meta content="utf-8" http-equiv="encoding" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="lreg_style.css" />
+  </head>
 
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <meta content="utf-8" http-equiv="encoding">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="lreg_style.css">
-</head>
+  <body>
+    <h1>Linear Regression</h1>
 
-<body>
-
-<h1>Linear Regression</h1>
-
-    
-<h4> Load Dataset </h4>
-<br>
-<div class="image">
-<a class="btn btn-primary" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Load_Datasets.ipynb" role="button"> Go to code</a>
-<br>
-<br>
-<h4> Linear Regression Tutorial </h4><br>
-<a class="btn btn-primary" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Linear_Regression_Tutorial.ipynb" role="button"> Go to code</a>
-<script src="https://gist.github.com/karmakarsubhajit/29daa10aec2e02dd6b98bfd49e4ed168.js"></script>
-
-
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html> 
+    <h4>Load Dataset</h4>
+    <br />
+    <div class="image">
+      <a
+        class="btn btn-primary"
+        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Load_Datasets.ipynb"
+        role="button"
+      >
+        Go to code</a
+      >
+      <br />
+      <br />
+      <h4>Linear Regression Tutorial</h4>
+      <br />
+      <a
+        class="btn btn-primary"
+        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Linear_Regression_Tutorial.ipynb"
+        role="button"
+      >
+        Go to code</a
+      >
+      <script src="https://gist.github.com/karmakarsubhajit/29daa10aec2e02dd6b98bfd49e4ed168.js"></script>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
