Making changes in links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <br>
     <div class="btn-group-vertical">
         <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Linear Regression</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Clustering</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Logistic Regression</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Naive Bayes</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Random Forest</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">K-Means Clustering</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">Logistic Regression</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">Naive Bayes</a>
+        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">Random Forest</a>
     </div> 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
