--- a/index.html
+++ b/index.html
@@ -16,16 +16,24 @@
 
 <body> 
     <h1>Data Science Demo</h1>  
-<div class="image">
     <br>
-    <div class="btn-group-vertical">
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="./linear_regression/index.html">Linear Regression</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">K-Means Clustering</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">Logistic Regression</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">Naive Bayes</a>
-        <a class="btn btn-primary btn-lg" role="button" style="text-decoration:none" href="#">Random Forest</a>
-    </div> 
-</div>
+    <div class="text-center">
+        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="./linear_regression/index.html">Linear Regression</a>
+        <br>
+        <br>
+        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">K-Means Clustering</a>
+        <br>
+        <br>
+        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">Logistic Regression</a>
+        <br>
+        <br>
+        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">Naive Bayes</a>
+        <br>
+        <br>
+        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">Random Forest</a>
+        <br>
+        <br>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
