removed the background image and centered the buttons

--- a/linear_regression/index.html
+++ b/linear_regression/index.html
@@ -19,7 +19,7 @@
 
     <h4>Load Dataset</h4>
     <br />
-    <div class="image">
+    <div class="text-center">
       <a
         class="btn btn-primary"
         href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Load_Datasets.ipynb"
@@ -27,10 +27,12 @@
       >
         Go to code</a
       >
-      <br />
-      <br />
-      <h4>Linear Regression Tutorial</h4>
-      <br />
+    </div>
+    <br />
+    <br />
+    <h4>Linear Regression Tutorial</h4>
+    <br />
+    <div class="text-center">
       <a
         class="btn btn-primary"
         href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Linear_Regression_Tutorial.ipynb"
@@ -38,8 +40,9 @@
       >
         Go to code</a
       >
-    <script src="https://gist.github.com/karmakarsubhajit/8d5a6f6375ef22e200c10fc142c6caf1.js"></script>  
     </div>
+    <br />
+    <script src="https://gist.github.com/karmakarsubhajit/8d5a6f6375ef22e200c10fc142c6caf1.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
