--- a/index.html
+++ b/index.html
@@ -1,42 +1,150 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <meta content="utf-8" http-equiv="encoding" />
+    <title>Data Science Demo</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="mystyle.css" />
+  </head>
 
-<head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <meta content="utf-8" http-equiv="encoding">
-    <title>
-        Data Science Demo
-    </title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="mystyle.css">
-    
-</head>
+  <body>
+    <nav
+      class="
+        navbar navbar-expand-lg
+        py-0
+        fixed-top
+        navbar-dark
+        bg-dark
+        shadow-sm
+      "
+    >
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <!-- Logo Image -->
+          <img
+            src="logo.jpg"
+            width="60"
+            alt=""
+            class="d-inline-block align-middle mr-2"
+          />
+          <!-- Logo Text -->
+          <span class="font-weight-bold">HandsOnData</span>
+        </a>
 
-<body> 
-    <h1>Data Science Demo</h1>  
-    <br>
+        <button
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+          class="navbar-toggler"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a href="index.html" class="nav-link"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <div class="text-center">
-        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="./linear_regression/index.html">Linear Regression</a>
-        <br>
-        <br>
-        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">K-Means Clustering</a>
-        <br>
-        <br>
-        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">Logistic Regression</a>
-        <br>
-        <br>
-        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">Naive Bayes</a>
-        <br>
-        <br>
-        <a class="btn btn-primary btn-lg custom" role="button" style="text-decoration:none" href="#">Random Forest</a>
-        <br>
-        <br>
+      <a
+        class="btn btn-primary btn-lg custom"
+        role="button"
+        style="text-decoration: none"
+        href="./linear_regression/index.html"
+        >Linear Regression</a
+      >
+      <br />
+      <br />
+      <a
+        class="btn btn-primary btn-lg custom"
+        role="button"
+        style="text-decoration: none"
+        href="k_means_clustering/k_means.html"
+        >K-Means Clustering</a
+      >
+      <br />
+      <br />
+      <a
+        class="btn btn-primary btn-lg custom"
+        role="button"
+        style="text-decoration: none"
+        href="#"
+        >Logistic Regression</a
+      >
+      <br />
+      <br />
+      <a
+        class="btn btn-primary btn-lg custom"
+        role="button"
+        style="text-decoration: none"
+        href="#"
+        >Naive Bayes</a
+      >
+      <br />
+      <br />
+      <a
+        class="btn btn-primary btn-lg custom"
+        role="button"
+        style="text-decoration: none"
+        href="#"
+        >Random Forest</a
+      >
+      <br />
+      <br />
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html> 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
