--- a/linear_regression/index.html
+++ b/linear_regression/index.html
@@ -15,6 +15,68 @@
   </head>
 
   <body>
+    <!-- <nav class="navbar fixed-top navbar-dark bg-dark">
+      <div>
+        <a class="navbar-brand px-5" href="../index.html">Data Science Demo</a>
+        <a class="navbar-brand px-5" href="../index.html">Home<span class="sr-only">(current)</span></a>
+        <a class="navbar-brand px-5" href="../about.html">About</a>
+      </div>
+      </nav> -->
+
+    <nav
+      class="
+        navbar navbar-expand-lg
+        py-0
+        fixed-top
+        navbar-dark
+        bg-dark
+        shadow-sm
+      "
+    >
+      <div class="container">
+        <a href="../index.html" class="navbar-brand">
+          <!-- Logo Image -->
+          <img
+            src="../logo.jpg"
+            width="60"
+            alt=""
+            class="d-inline-block align-middle mr-2"
+          />
+          <!-- Logo Text -->
+          <span class="font-weight-bold">HandsOnData</span>
+        </a>
+
+        <button
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+          class="navbar-toggler"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a href="../index.html" class="nav-link"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="../about.html" class="nav-link">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <h1>Linear Regression</h1>
 
     <h4>Load Dataset</h4>
