--- a/k_means_clustering/k_means.html
+++ b/k_means_clustering/k_means.html
@@ -87,10 +87,10 @@
     </div>
     <br />
     <br />
-    <h4>Linear Regression Tutorial</h4>
+    <h4>K-Means Tutorial</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href="#" role="button"> Go to code</a>
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/KMeans_Tutorial.ipynb" role="button"> Go to code</a>
     </div>
     <br />
     <script src="#"></script>
