--- a/k_means_clustering/k_means.html
+++ b/k_means_clustering/k_means.html
@@ -90,7 +90,7 @@
     <h4>K-Means Tutorial</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href=""> Go to code</a>
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/KMeans_Tutorial.ipynb"> Go to code</a>
     </div>
     <br />
     <script src="#"></script>
