--- a/linear_regression/index.html
+++ b/linear_regression/index.html
@@ -92,6 +92,19 @@
     </div>
     <br />
     <br />
+    <h4>Create Dataset</h4>
+    <br />
+    <div class="text-center">
+      <a
+        class="btn btn-primary"
+        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Create_Datasets.ipynb"
+        role="button"
+      >
+        Go to code</a
+      >
+    </div>
+    <br />
+    <br />
     <h4>Linear Regression Tutorial</h4>
     <br />
     <div class="text-center">
