--- a/about.html
+++ b/about.html
@@ -91,15 +91,25 @@
     <br />
     <br />
     <br />
-    <div id="designation">
-      <h2>
-        <b><i>Mentored by:</i></b
-        ><br />
-        Dr. Mrinal Kanti Das <br />Assistant Professor <br />Department of
-        Computer Science & Engineering <br />Indian Institute of Technology
-        Palakkad
-      </h2>
-    </div>
+    <div class="container" style="display: flex">
+      <div style="width: 50%;">
+        <ul>
+          <li><h6>Point1</h6></li>
+          <li><h6>Point2</h6></li>
+          <li><h6>Point3</h6></li>
+        </ul> 
+      </div>
+      <div style="flex-grow: 1;">
+        <div id="designation">
+          <h6>
+          <b><i>Mentored by:</i></b
+          ><br />
+          Dr. Mrinal Kanti Das <br />Assistant Professor <br />Dept. CSE <br />Indian Institute of Technology
+          Palakkad
+        </h6>
+      </div>
+      </div>
+  </div>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
