--- a/about.html
+++ b/about.html
@@ -94,9 +94,9 @@
     <div class="container" style="display: flex">
       <div style="width: 50%;">
         <ul>
-          <li><h6>Point1</h6></li>
-          <li><h6>Point2</h6></li>
-          <li><h6>Point3</h6></li>
+          <li><h6>HandsOnData is an app intended to help people learn Data Science. </h6></li>
+          <li><h6>HandsOnData contains implementations of various Machine algorithms.</h6></li>
+          <li><h6>HandsOnData helps to learn the entire end-to-end data pipeline</h6></li>
         </ul> 
       </div>
       <div style="flex-grow: 1;">
