--- a/about.html
+++ b/about.html
@@ -78,16 +78,10 @@
     <br />
     <h1>About</h1>
     <div id="about_content">
-      The work contained in the project entitled “Data Science Demo” is a
-      bonafide work of Subhajit Karmakar and Parmanand Kumar (Roll No. 111801041
-      and 111801030), carried out in the Department of Computer Science and
-      Engineering, Indian Institute of Technology Palakkad.<br />
-      This project involves building an easy-to-use portable and demonstrable
-      data science toolkit. The toolkit is able to do preprocessing of various
-      datasets, visualization of results, storing datasets, data analytics, and
-      various machine learning algorithms. Demos are available in Python,
-      Jupyter notebook, and the Colab platform.
-    </div>
+      This project named HandsOnData is done by Subhajit Karmakar and Parmanand Kumar, undergraduate students of Computer Science and Engineering,  
+      Indian Institute of Technology Palakkad as part of their Final Year BTech Project. This project is carried out under the guidance of Dr. Mrinal Kanti Das, 
+      Assistant Professor, Computer Science and Engineering Department, IIT Palakkad.  
+     </div>
     <br />
     <br />
     <br />
@@ -99,17 +93,7 @@
           <li><h6>HandsOnData helps to learn the entire end-to-end data pipeline</h6></li>
         </ul> 
       </div>
-      <div style="flex-grow: 1;">
-        <div id="designation">
-          <h6>
-          <b><i>Mentored by:</i></b
-          ><br />
-          Dr. Mrinal Kanti Das <br />Assistant Professor <br />Dept. CSE <br />Indian Institute of Technology
-          Palakkad
-        </h6>
-      </div>
-      </div>
-  </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
