--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
     <h1>About</h1>
     <div id="about_content">
       This project named HandsOnData is done by Subhajit Karmakar and Parmanand Kumar, undergraduate students of Computer Science and Engineering,  
-      Indian Institute of Technology Palakkad as part of their Final Year BTech Project. This project is carried out under the guidance of Dr. Mrinal Kanti Das, 
+      Indian Institute of Technology Palakkad as part of their Final Year BTech Project. </br> This project is carried out under the guidance of Dr. Mrinal Kanti Das, 
       Assistant Professor, Computer Science and Engineering Department, IIT Palakkad.  
      </div>
     <br />
