--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
         <ul>
           <li><h6>HandsOnData is an app intended to help people learn Data Science. </h6></li>
           <li><h6>HandsOnData contains implementations of various Machine algorithms.</h6></li>
-          <li><h6>HandsOnData helps to learn the entire end-to-end data pipeline</h6></li>
+          <li><h6>HandsOnData helps to learn the entire end-to-end data pipeline starting from data preprocessing, data visualization, and then application of the algorithm.</h6></li>
         </ul> 
       </div>
     </div>
