--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         role="button"
         style="text-decoration: none"
         href="#"
-        >Logistic Regression</a
+        >Data Preprocessing</a
       >
       <br />
       <br />
@@ -112,19 +112,11 @@
         role="button"
         style="text-decoration: none"
         href="#"
-        >Naive Bayes</a
+        >Data Visualization</a
       >
       <br />
       <br />
-      <a
-        class="btn btn-primary btn-lg custom"
-        role="button"
-        style="text-decoration: none"
-        href="#"
-        >Random Forest</a
-      >
-      <br />
-      <br />
+      
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
