--- a/about.html
+++ b/about.html
@@ -85,14 +85,12 @@
     <br />
     <br />
     <br />
-    <div class="container" style="display: flex">
-      <div style="width: 50%;">
+    <div id="points">
         <ul>
           <li><h6>HandsOnData is an app intended to help people learn Data Science. </h6></li>
           <li><h6>HandsOnData contains implementations of various Machine algorithms.</h6></li>
           <li><h6>HandsOnData helps to learn the entire end-to-end data pipeline starting from data preprocessing, data visualization, and then application of the algorithm.</h6></li>
         </ul> 
-      </div>
     </div>
 
     <script
