--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     />
     <link rel="stylesheet" href="mystyle.css" />
   </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <body>
     <nav
@@ -79,43 +80,54 @@
     <br />
     <br />
     <br />
-    <div class="text-center">
-      <a
-        class="btn btn-primary btn-lg custom"
-        role="button"
-        style="text-decoration: none"
-        href="./linear_regression/index.html"
-        >Linear Regression</a
-      >
-      <br />
-      <br />
-      <a
-        class="btn btn-primary btn-lg custom"
-        role="button"
-        style="text-decoration: none"
-        href="k_means_clustering/k_means.html"
-        >K-Means Clustering</a
-      >
-      <br />
-      <br />
-      <a
-        class="btn btn-primary btn-lg custom"
-        role="button"
-        style="text-decoration: none"
-        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Data_Preprocessing.ipynb "
-        >Data Preprocessing</a
-      >
-      <br />
-      <br />
-      <a
-        class="btn btn-primary btn-lg custom"
-        role="button"
-        style="text-decoration: none"
-        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Data_Visualization.ipynb"
-        >Data Visualization</a
-      >
-      
-    </div>
+</head>
+<body>
+
+<button type="button" class="collapsible">Data Visualization and Preprocessing</button>
+<div class="content">
+  <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Data_Visualization.ipynb">Data Visualization</a></button>
+  <button type="button" class="uncollapsible" ><a id="link" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Data_Preprocessing.ipynb">Data Preprocessing</a></button>
+</div>
+
+<br>
+
+<button type="button" class="collapsible">Regression</button>
+<div class="content">
+  <button type="button" class="uncollapsible"><a id="link" href="./linear_regression/index.html">Linear Regression</button>
+  <button type="button" class="uncollapsible"><a id="link" href="#">Item 2</a></button>
+  <button type="button" class="uncollapsible"><a id="link" href="#">Item 3</a></button>
+</div>
+<br>
+<button type="button" class="collapsible">Clustering</button>
+<div class="content">
+  <button type="button" class="uncollapsible"><a id="link" href="k_means_clustering/k_means.html">K Means Clustering</a></button>
+  <button type="button" class="uncollapsible"><a id="link" href="#">Algo 2</a></button>
+  <button type="button" class="uncollapsible"><a id="link" href="#">Algo 3</a></button>
+</div>
+<br>
+<button type="button" class="collapsible">Classification</button>
+<div class="content">
+  <button type="button" class="uncollapsible"><a id="link" href="#">Algo 1</a></button>
+  <button type="button" class="uncollapsible"><a id="link" href="#">Algo 2</a></button>
+  <button type="button" class="uncollapsible"><a id="link" href="#">Algo 3</a></button>
+</div>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
