--- a/k_means_clustering/k_means.html
+++ b/k_means_clustering/k_means.html
@@ -80,20 +80,13 @@
     <br />
     <h1>K-means Clustering</h1>
 
-    <h4>Load Dataset</h4>
-    <br />
-    <div class="text-center">
-      <a class="btn btn-primary" href="#" role="button"> Go to code</a>
-    </div>
-    <br />
-    <br />
     <h4>K-Means Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/KMeans_Tutorial.ipynb"> Go to code</a>
     </div>
     <br />
-    <script src="#"></script>
+    <script src="https://gist.github.com/karmakarsubhajit/47f7eefcaf3e1acab5712d5693fcf5ee.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
