Updating title in K Means clustering html

--- a/k_means_clustering/k_means.html
+++ b/k_means_clustering/k_means.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Linear Regression</title>
+    <title>K Means Clustering</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
