--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="index.html" class="nav-link"
                 >Home</a
               >
