--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="index.html" class="nav-link"
                 >Home <span class="sr-only">(current)</span></a
               >
