--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="mystyle.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
