--- a/naive_bayes/naive_bayes.html
+++ b/naive_bayes/naive_bayes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About</title>
+    <title>Naive Bayes</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
@@ -11,17 +11,18 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="naive_bayes.css" />
   </head>
 
   <body>
     <!-- <nav class="navbar fixed-top navbar-dark bg-dark">
-        <div>
-          <a class="navbar-brand px-5" href="index.html">Data Science Demo</a>
-          <a class="navbar-brand px-5" href="index.html">Home<span class="sr-only">(current)</span></a>
-          <a class="navbar-brand px-5" href="about.html">About</a>
-        </div>
-        </nav> -->
+      <div>
+        <a class="navbar-brand px-5" href="../index.html">Data Science Demo</a>
+        <a class="navbar-brand px-5" href="../index.html">Home<span class="sr-only">(current)</span></a>
+        <a class="navbar-brand px-5" href="../about.html">About</a>
+      </div>
+      </nav> -->
+
     <nav
       class="
         navbar navbar-expand-lg
@@ -33,10 +34,10 @@
       "
     >
       <div class="container">
-        <a href="home.html" class="navbar-brand">
+        <a href="../home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
-            src="logo.jpg"
+            src="../logo.jpg"
             width="60"
             alt=""
             class="d-inline-block align-middle mr-2"
@@ -59,16 +60,13 @@
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="home.html" class="nav-link"
-                >Home</a
+            <li class="nav-item active">
+              <a href="../home.html" class="nav-link"
+                >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">About<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a href="resources.html" class="nav-link">Resources</a>
+              <a href="../about.html" class="nav-link">About</a>
             </li>
           </ul>
         </div>
@@ -79,23 +77,34 @@
     <br />
     <br />
     <br />
-    <h1>About</h1>
-    <div id="about_content">
-      This project named HandsOnData is done by Subhajit Karmakar and Parmanand Kumar, undergraduate students of Computer Science and Engineering,  
-      Indian Institute of Technology Palakkad as part of their Final Year BTech Project. </br> This project is carried out under the guidance of Dr. Mrinal Kanti Das, 
-      Assistant Professor, Computer Science and Engineering Department, IIT Palakkad.  
-     </div>
-    <br />
-    <br />
-    <br />
-    <div id="points">
-        <ul>
-          <li><h6>HandsOnData is an app intended to help people learn Data Science. </h6></li>
-          <li><h6>HandsOnData contains implementations of various Machine algorithms.</h6></li>
-          <li><h6>HandsOnData helps to learn the entire end-to-end data pipeline starting from data preprocessing, data visualization, and then application of the algorithm.</h6></li>
-        </ul> 
-    </div>
+    <h1>Naive Bayes</h1>
 
+    <h4>Load Dataset</h4>
+    <br />
+    <div class="text-center">
+      <a
+        class="btn btn-primary"
+        href="#"
+        role="button"
+      >
+        Go to code</a
+      >
+    </div>
+    <br />
+    <br />
+    <h4>Naive Bayes Tutorial</h4>
+    <br />
+    <div class="text-center">
+      <a
+        class="btn btn-primary"
+        href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Naive_Bayes_Tutorial.ipynb"
+        role="button"
+      >
+        Go to code</a
+      >
+    </div>
+    <br />
+    <script src="#"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
