--- a/k_means_clustering/k_means.html
+++ b/k_means_clustering/k_means.html
@@ -34,7 +34,7 @@
       "
     >
       <div class="container">
-        <a href="../index.html" class="navbar-brand">
+        <a href="../home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
             src="../logo.jpg"
@@ -61,7 +61,7 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="../index.html" class="nav-link"
+              <a href="../home.html" class="nav-link"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -80,7 +80,7 @@
     <br />
     <h1>K-means Clustering</h1>
 
-    <h4>K-Means Tutorial</h4>
+  <h4>K-Means Tutorial</h4>
     <br />
     <div class="text-center">
       <a class="btn btn-primary" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/KMeans_Tutorial.ipynb"> Go to code</a>
@@ -92,6 +92,7 @@
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
+    
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
