--- a/linear_regression/index.html
+++ b/linear_regression/index.html
@@ -34,7 +34,7 @@
       "
     >
       <div class="container">
-        <a href="../index.html" class="navbar-brand">
+        <a href="../home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
             src="../logo.jpg"
@@ -61,7 +61,7 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="../index.html" class="nav-link"
+              <a href="../home.html" class="nav-link"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
