Widened the text to fit in one line

--- a/index.html
+++ b/index.html
@@ -76,28 +76,29 @@
     </nav>
         <div class="first_page-container">
           <div class ="heading">
-             <h1 style="color: white; margin-top:30px; margin-bottom: 10px; font-size: 50px;"><b>Welcome to HandsOnData</b></h1>
-          </div>
+             <p style="color: white; margin-top:30px; margin-bottom: 10px; font-size: 70px;"><b>Welcome to HandsOnData</b></p>
+          
           <br>
           <br>
-          <div class="content-list">
+          <div style="width: 1000px; height: 300px; margin: auto; text-align: left;">
             <ul>
-              <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 23px;">    One Stop Solution to Learn Data Science.</span></i>
+              <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 32px;">    One Stop Solution to Learn Data Science.</span></i>
               <br>
               <br>
-              <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 23px;">   Learn from our user-friendly and easy to follow tutorials. </span></i>
+              <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 32px;">   Learn from our user-friendly and easy to follow tutorials. </span></i>
               <br>
               <br>
-              <i class="fa fa-check-circle" style="font-size:36px;color:hsl(105, 100%, 55%)"><span style="color: white; font-size: 23px;"> Hands On Experience of creating Machine Learning Models. </span></i>
+              <i class="fa fa-check-circle" style="font-size:36px;color:hsl(105, 100%, 55%)"><span style="color: white; font-size: 32px;"> Hands On Experience of creating Machine Learning Models. </span></i>
               <br>
               <br>
-              <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 23px;">   Get access to different resources to learn Data Science.</span></i>
+              <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 32px;">   Get access to different resources to learn Data Science.</span></i>
               <br>
               <br>
             </ul>
           </div>
           <br>
           <a type="button" class="btn btn-primary btn-lg" href="home.html">Let's Get Started</a>
+        </div>
         </div>
         <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
 </body>
