added link for load data in Naive Bayes

--- a/naive_bayes/naive_bayes.html
+++ b/naive_bayes/naive_bayes.html
@@ -84,7 +84,7 @@
     <div class="text-center">
       <a
         class="btn btn-primary"
-        href="#"
+        href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/NaiveBayes_Load_Datasets.ipynb"
         role="button"
       >
         Go to code</a
