Made changes to content in home page and edited buttons' '

--- a/home.html
+++ b/home.html
@@ -130,10 +130,9 @@
               <i class="fa fa-bar-chart" style="font-size:40px;" aria-hidden="true"></i>
               <h4 class="info-title"><a href=""><b>Data Visualization and Preprocessing</b></a></h4>
               <div class="info-content">
-                  Get Hands On experience of  Data Visualization  by experimenting with real-life dataset using various Data Visualization techniques like plots, histogram,etc. and decode the trends, patterns and outliers in data.
-                  <br>
-                  <br>
-                  Use our Data Preprocessing tutorial and start transforming raw data into an understandable format to ensure the quality of data before applying different ML algorithms.
+                <p><br></p> 
+                  <b>Get Hands On experience of various Data Visualization and Preprocessing techniques.</b>
+                  <p><br></p>
               </div>
             </div>
           </div>
@@ -144,7 +143,7 @@
               <br>
               <h4 class="info-title"><a href=""><b>Regression</b></a></h4>
               <div class="info-content">
-                 Get Hands On Experience of various regression techniques like Linear Regression, Ridge Regression and learn to apply them in real-life problems. 
+                 <b>Get Hands On Experience of various regression techniques like Linear Regression, Ridge Regression and learn to apply them in real-life problems.</b> 
               </div>
 
             </div>
@@ -157,14 +156,14 @@
         <div class="col-md-5 d-flex zoom" style="background-color: white; text-align: center; margin-left: 90px; margin-top: 40px;">
           <div class="icon-box">
             <h4 class="info-title"><a href=""><b>Clustering</b></a></h4>
-            <p class="info-content"> Learn how to group data of similar features using various Clustering algorithms like K-Means.</p>
+            <p class="info-content"> <b>Learn how to group data of similar features using various Clustering algorithms like K-Means.</b></p>
           </div>
         </div>
 
         <div class="col-md-5 d-flex zoom" style="background-color: white; text-align: center; margin-left: 45px; margin-top: 40px;" >
           <div class="icon-box icon-box-pink">
             <h4 class="info-title"><a href=""><b>Classification</b></a></h4>
-            <p class="info-content">Get Hands On Experience of classifying data into separate classes using algorithms like Naive Bayes, Logistic Regression and learn to apply them on real life datasets.</p>
+            <p class="info-content"><b>Get Hands On Experience of classifying data into separate classes using algorithms like Naive Bayes, Logistic Regression and learn to apply them on real life datasets.</b></p>
           </div>
         </div>
 
