--- a/naive_bayes/naive_bayes.html
+++ b/naive_bayes/naive_bayes.html
@@ -87,7 +87,7 @@
         href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/NaiveBayes_Load_Datasets.ipynb"
         role="button"
       >
-        Go to code</a
+        Edit Code</a
       >
     </div>
     <br />
@@ -100,7 +100,7 @@
         href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Naive_Bayes_Tutorial.ipynb"
         role="button"
       >
-        Go to code</a
+        Edit Code</a
       >
     </div>
     <br />
