--- a/linear_regression/index.html
+++ b/linear_regression/index.html
@@ -87,7 +87,7 @@
         href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Load_Datasets.ipynb"
         role="button"
       >
-        Go to code</a
+        Edit Code</a
       >
     </div>
     <br />
@@ -100,7 +100,7 @@
         href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Create_Datasets.ipynb"
         role="button"
       >
-        Go to code</a
+        Edit Code</a
       >
     </div>
     <br />
@@ -113,7 +113,7 @@
         href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Linear_Regression_Tutorial.ipynb"
         role="button"
       >
-        Go to code</a
+        Edit Code</a
       >
     </div>
     <br />
