--- a/resources.html
+++ b/resources.html
@@ -78,5 +78,6 @@
   <br />
     <h1><b><u><center>Resources</center></u></b></h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLnvKubj2-I2LhIibS8TOGC42xsD3-liux" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
-</body>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jGwO_UgTS7I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </body>
 </html>
