--- a/home.html
+++ b/home.html
@@ -78,6 +78,9 @@
               <li class="nav-item">
                 <a href="resources.html" class="nav-link">Resources</a>
               </li>
+              <li class="nav-item">
+                <a href="Contributions/contributions.html" class="nav-link">Contributions</a>
+              </li>
             </ul>
           </div>
         </div>
