Adding another feature

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
               <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 32px;">   Get access to different resources to learn Data Science.</span></i>
               <br>
               <br>
+              <i class="fa fa-check-circle" style="font-size:36px;color:#53ff1a"><span style="color: white; font-size: 32px;"> Open Source and Community Driven </span></i>
+              <br>
+              <br>
             </ul>
           </div>
           <br>
