Updating contributions page

--- a/Contributions/contributions.html
+++ b/Contributions/contributions.html
@@ -79,15 +79,35 @@
   <br />
   <br />
   <br />
-    <h1><b><center>How to Contribute ?</center></b></h1>
-    <br>
-    <div id= "steps" style="width: 780px; margin: auto; text-align: left;">
-    <ol>
-        <li>Login with your Personal Github Account.</li>
-        <li>Click on the following <a href="https://github.com/hands-on-data/hands-on-data.github.io">REPO LINK</a> and FORK it.</li>
-        <li>Make changes to the forked repository and Create Pull Request.</li>
-    </ol>
+  
+  <div class="row">
+    
+    <div class="col-sm-6">
+      <h1><b><center>How to Contribute ?</center></b></h1>
+      <br>
+      <div id= "steps" style="float: left; margin: auto; text-align: left;">
+        <ol>
+            <li>Login with your Personal Github Account.</li>
+            <li>Click on the following <a href="https://github.com/hands-on-data/hands-on-data.github.io">REPO LINK</a> and FORK it.</li>
+            <li>Make changes to the forked repository and Create Pull Request.</li>
+        </ol>
+      </div>
     </div>
+
+
+    <div class="col-sm-6">
+      <h1><b><center>How to Contribute ?</center></b></h1>
+      <br>
+      <div id= "steps" style="float: left; margin: auto; text-align: left;">
+        <ol>
+            <li>Login with your Personal Github Account.</li>
+            <li>Click on the following <a href="https://github.com/hands-on-data/hands-on-data.github.io">REPO LINK</a> and FORK it.</li>
+            <li>Make changes to the forked repository and Create Pull Request.</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+    <br>
     <br>
 
     <div class="card">
@@ -99,7 +119,6 @@
       </div>
     </div>
 
-    
     <div class="card">
       <h5 class="card-header"><b>Project Name: YOLO</b></h5>
       <div class="card-body">
