added contributed notebooks

--- a/home.html
+++ b/home.html
@@ -125,6 +125,15 @@
           <button type="button" class="uncollapsible"><a id="link" href="#">Algo 2</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="#">Algo 3</a></button>
         </div>
+      
+      <br>
+
+      <button type="button" class="collapsible">Contributed Notebooks</button>
+        <div class="content">
+          <button type="button" class="uncollapsible"><a id="link" href="#">Algo 1</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="#">Algo 2</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="#">Algo 3</a></button>
+        </div>
 </div>
 <div id="info" style="float: right; width: 75%; height: 100vh; background-color: #eaebec;">
       <div class="row">
