added contributions in nav bar

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <li class="nav-item">
               <a href="resources.html" class="nav-link">Resources</a>
             </li>
+            
+            <li class="nav-item">
+              <a href="Contributions/contributions.html" class="nav-link">Contributions</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -98,6 +102,7 @@
               <br>
               <br>
             </ul>
+            
           </div>
           <br>
           <a type="button" class="btn btn-primary btn-lg" href="home.html">Let's Get Started</a>
